# kona

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  test_api.sh
docs/: CHANGES.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md
src/: main.rs
src/api/: client.rs  mock.rs  mod.rs
src/cli/: cli.rs  interactive.rs  mac.rs  mod.rs  tui.rs
src/config/: config.rs  mod.rs  tests.rs
src/history/: mod.rs  storage.rs  tests.rs
src/utils/: error.rs  mod.rs  tests.rs
tests/: cli_tests.rs
