[package]
name = "kona"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP requests
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

# Environment variable management
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Interactive mode
rustyline = "12.0"
colored = "2.1"
dirs = "5.0"

# Configuration
toml = "0.8.6"

[dev-dependencies]
# HTTP mocking for tests
mockito = "1.2"
